feat: add logic for sorting page

--- a/src/components/fibonacci-page/fibonacci-page.module.css
+++ b/src/components/fibonacci-page/fibonacci-page.module.css
@@ -20,3 +20,7 @@
   flex-wrap: wrap;
   gap: calc(var(--offset-base-size)*24) calc(var(--offset-base-size)*8);
 }
+
+.align_left {
+  justify-content: start;
+}
